Fixed tic tac toe alignment and changed tic tac toe symbols.

--- a/KaimGames.Web/wwwroot/css/site.css
+++ b/KaimGames.Web/wwwroot/css/site.css
@@ -228,4 +228,8 @@ a.fill-div {
     font-size: xx-large;
 }
 
+.tictactoe-mark {
+    color: green;
+}
+
 /* End Tic Tac Toe */
